--- a/myapp/Dockerfile
+++ b/myapp/Dockerfile
@@ -7,14 +7,12 @@ COPY . .
 USER root
 
 # Install required packages and create virtual environment
-RUN python3 -m venv /myapp/venv && \
-    /myapp/venv/bin/python -m ensurepip && \
-    /myapp/venv/bin/pip install --upgrade pip && \
-    /myapp/venv/bin/pip install --no-cache-dir -r /myapp/requirements.txt
-    
+RUN python3 -m venv venv && source venv/bin/activate 
+RUN pip install --no-cache-dir -r requirements.txt
+
 USER jenkins
 
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s \ 
             --retries=3 CMD [ "python3", "hello.py" ]
 
-ENTRYPOINT ["/bin/bash", "-c", ". /myapp/venv/bin/activate && exec \"$@\"", "--"]
+ENTRYPOINT ["/bin/bash", "-c", "source venv/bin/activate && exec \"$@\"", "--"]
